--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,16 +51,30 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:18.0.0'
     //add the Firebase SDK for Firbase Firestore
     implementation 'com.google.firebase:firebase-firestore:22.0.0'
+    //storage
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
 
     //lottie animations
-    def lottieVersion = "3.4.3"
-    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.airbnb.android:lottie:3.4.4"
 
     //encriptacion base 64
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.14'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-crypto
     implementation group: 'org.apache.commons', name: 'commons-crypto', version: '1.0.0'
+
+    //send email
+    implementation files('libs/mail.jar')
+    implementation files('libs/activation.jar')
+    implementation files('libs/additionnal.jar')
+
+
+    //compresion de imagenes
+    implementation 'id.zelory:compressor:2.1.0'
+
+    implementation 'androidx.preference:preference:1.1.1'
+
+    implementation 'commons-net:commons-net:3.3'
 
 
 }
